--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
                     <input name="password" type="password" class="form-control" placeholder="Your Password">
                 </form>
                 <div>
-                    <a href="#" class="btn">Sign Up</a>
+                    <a href="/register" class="btn special">Sign Up</a>
                 </div>
             </div>
         </section>
@@ -35,8 +35,8 @@
     </form>
 </div> -->
 
+
 <link href='static/homepage.css' rel='stylesheet'/>
-<script src='static/moon_phase_today.js'></script>
 
 
 
