--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,8 +12,8 @@
         <section class="col-xs-12 col-sm-12 col-md-6 col-lg-6 right">
             <div class="col-md-4 col-md-offset-3">
                 <h2 id="signup">Sign Up</h2>
-                <form>
-                    <input name="username" type="text" class="form-control" placeholder="Your Username">
+                <form action="/register" method="POST">
+                    <input name="email" type="text" class="form-control" placeholder="Your Email">
                     <input name="password" type="password" class="form-control" placeholder="Your Password">
                 </form>
                 <div>
@@ -23,18 +23,6 @@
         </section>
     </div>
 </div>
-<!-- <div id = "login">
-    <h5> Returning user? Log in </h5>
-    <form action='/login'  method="POST">
-        Username:
-        <input type='text' name ='email'>
-        <br>
-        Password:
-        <input type='text' name = 'password'><br>
-        <input type="submit">
-    </form>
-</div> -->
-
 
 <link href='static/homepage.css' rel='stylesheet'/>
 
