--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
     <link href='static/fullcalendar/packages/daygrid/main.css' rel='stylesheet'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Changa|Electrolize|Jura|Nanum+Gothic+Coding|Press+Start+2P|Tomorrow|Turret+Road|Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link href='static/style.css' rel='stylesheet'/>
     <link href="/static/favicon.ico" rel="icon" type="image/x-icon"/>
 
 
@@ -18,35 +17,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
+    <link href='static/style.css' rel='stylesheet'/>
+    <link rel='stylesheet' href='/static/tooltips.css'/>
 
 <body>
-  <!-- Static navbar -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">Moon Phase Tracker</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="/calendar">Moon Phase Calendar</a></li>
-        {% if 'fname' in session %}
-            <li><a href="/display-settings">Manage Settings</a></li>
-        </ul>
-        <form>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="/logout" class="btn">Log Out</a></li>
-        {% else %}
-            <li>
-                <form action="/login" method="POST">
-                    <input name="email" type="text" class="form-login" placeholder="Your Email" hidden>
-                    <input name="password" type="password" class="form-login" placeholder="Your Password" hidden>
-                    <button class="btn btn-link try" data-is-clicked="false" role="button">Log In</button>
-            </form>
-        </ul>
-        {% endif %}
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-default">
+
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">Moon Phase Tracker</a>
+            </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/calendar">Moon Phase Calendar</a></li>
+        {% if 'fname' not in session %}
+        </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <form action="/login" method="POST">
+                        <input name="email" type="text" class="form-login" placeholder="Your Email" hidden>
+                        <input name="password" type="password" class="form-login" placeholder="Your Password" hidden>
+                        <button class="btn btn-link try" data-is-clicked="false" role="button">Log In</button>
+                    </form>
+                </li>
+            </ul>
+    {% else %}
+                <li><a href="/display-settings">Manage Settings</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout" class="btn">Log Out</a></li>
+            </ul>
+        </div>
+    {% endif %}
+    </nav>
 
 
 
@@ -64,17 +67,13 @@
 
 </body>
 
-
 <script>
     $('.try').on('click', (evt) => {
         const btn = $(evt.target);
-        console.log(btn.data("isClicked"));
-
         if (btn.data('isClicked') === false) {
             evt.preventDefault();
             $('.form-login').removeAttr('hidden');
             btn.data('isClicked', true);
-            console.log('hi')
         }
     })
 </script>
