--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,7 @@
 <div class="container-fluid">
     <div class="row">
         <section class="col-xs-12 col-sm-12 col-md-6 col-lg-6 left">
-            <p>Track the moon with</p>
-            <p>personalized text alerts</p>
+            <h3>Track the moon with personalized text alerts</h3>
         </section>
 
         <section class="col-xs-12 col-sm-12 col-md-6 col-lg-6 right">
@@ -15,10 +14,10 @@
                 <form action="/register" method="POST">
                     <input name="email" type="text" class="form-control" placeholder="Your Email">
                     <input name="password" type="password" class="form-control" placeholder="Your Password">
+                    <div>
+                        <button class="btn btn-link special" data-is-clicked="false" role="button">Sign Up</button>
+                    </div>
                 </form>
-                <div>
-                    <a href="/register" class="btn special">Sign Up</a>
-                </div>
             </div>
         </section>
     </div>
