--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
         {% if messages %}
             <ul class=flashes>
             {% for message in messages %}
-                <li>{{ message }}</li>
+                {{ message }}
             {% endfor %}
             </ul>
             {% endif %}
