--- a/templates/registration.html
+++ b/templates/registration.html
@@ -5,19 +5,25 @@
 <h3>Complete the form below to sign up for texts</h3>
 <br>
 <form action="/process-registration" method="POST">
-    First name:
-    <input type='text' name ='fname'>
-    <br>
-    <br>
-    Last name:
-    <input type='text' name ='lname'>
-    <br>
-    <br>
-    Phone number:
-    <input type='text' name ='phone'>
-    <br>
+    <table>
+
+        <tr>
+            <td>First name:
+            <input type='text' name ='fname'></td>
+            <td>Last name:
+            <input type='text' name ='lname'></td>
+        </tr>
+        <tr>
+            <td><br></td>
+        </tr>
+        <tr>
+            <td>Phone number: 
+            <input type='text' name ='phone'></td>
+        </tr>
+    </table>
     <br>
     <i>Which text alerts would you like to receive?</i>
+    <br>
     <br>
     <h5>Moon Phases</h5>
     <div class="moon_phases">
