--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,7 @@
 
         <section class="col-xs-12 col-sm-12 col-md-6 col-lg-6 right">
             <div class="col-md-4 col-md-offset-3">
-                <h2 id="signup">Sign Up</h2>
+                <h2 id="signup">Sign Up For Texts</h2>
                 <form action="/register" method="POST">
                     <input name="email" type="text" class="form-control" placeholder="Your Email">
                     <input name="password" type="password" class="form-control" placeholder="Your Password">
