--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .fc-unthemed td.fc-today {
-  background: rgba(115, 114, 114);
+  background: rgba(217, 217, 217);
 }
 
 .fc-button-primary:disabled, .fc-prev-button:hover, .fc-next-button:hover{
@@ -81,12 +81,13 @@ h2 {
   color: rgba(166, 165, 164)
 }
 
-input[type="text"] {
+input[type="text"], input[type='password'] {
   border-left: transparent;
   border-right: transparent;
   border-top: transparent;
   background-color: transparent;
 }
+
 .change-settings {
   border: 1px solid rgba(217, 217, 217);
   padding: 10px;
@@ -109,18 +110,31 @@ input[type="text"] {
   font-family: 'Tomorrow', sans-serif;
 }
 
-.btn-link.try {
-  color: rgba(13, 13, 13);
+.btn-link.try, a.btn {
+  margin: 0px;
+  display: inline-block;
+  background-color: transparent;
+  padding: 15px 15px;
+  border: 1px solid rgba(13, 13, 13);
   text-transform: uppercase;
   letter-spacing: 0.015em;
   font-family: 'Tomorrow', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
+  color: rgba(13, 13, 13);             
+  text-decoration: none;
+  -webkit-transition: all 0.4s;
+     -moz-transition: all 0.4s;
+       -o-transition: all 0.4s;
+          transition: all 0.4s;
+}
 }
 
 .form-login {
   background: transparent;
   border: 0;
   border-bottom: 1.5px solid rgba(13, 13, 13);
-  border-bottom-length: 10px;
   color: rgba(13, 13, 13);
   text-transform: uppercase;
   letter-spacing: 0.015em;
