--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,74 +6,72 @@
 
 <h4>Personal Information</h4>
 <br>
-<table>
-    <form action='/change-settings' method="POST">
-        <tr>
-            <td>First name:
-            <input type='text' name ='fname' value = '{{ user.fname }}' disabled></td>
-            <td>Last name:
-            <input type='text' name ='lname' value = '{{ user.lname }}' disabled></td>
-        </tr>
-        <tr>
-            <td><br></td>
-        </tr>
-        <tr>
-            <td>Phone number:
-            <input type='text' name ='phone' value = '{{ user.phone }}' disabled></td>
-            <td>Email address:
-            <input type='text' name ='email' value = '{{ user.email }}' disabled></td>
-        </tr>
+
+    <form action='/change-settings.json' method="GET" id="manage-settings-form">
+
+        <table>
+            <tr>
+                <td>First name:
+                <input type='text' name ='fname' value = '{{ user.fname }}' disabled></td>
+                <td>Last name:
+                <input type='text' name ='lname' value = '{{ user.lname }}' disabled></td>
+            </tr>
+            <tr>
+                <td><br></td>
+            </tr>
+            <tr>
+                <td>Phone number:
+                <input type='text' name ='phone' value = '{{ user.phone }}' disabled></td>
+                <td>Email address:
+                <input type='text' name ='email' value = '{{ user.email }}' disabled></td>
+            </tr>
+        </table>
+        <br>
+        <br>
+        <br>
+        <h4>Text subscriptions</h4>
+        <br>
+        <h5>Moon Phases</h5>
+        <div class='moon_phases'>
+        {% for moon_phase in moon_phases %}
+            {% if moon_phase.moon_phase_type_id in moon_phase_type_alerts %}
+                <input type="checkbox" name="moon_phase_choices" value="{{ moon_phase.moon_phase_type_id }}" checked disabled>   {{ moon_phase.title }}
+                <button type="button" class="btn popover-info" data-toggle="popover" title="{{ moon_phase.title }}" data-content="{{ moon_phase.description }}">
+                    <span class="glyphicon glyphicon-question-sign"></span>
+                </button>
+                <br>
+            {% else %}
+                <input type="checkbox" name="moon_phase_choices" value="{{ moon_phase.moon_phase_type_id }}" disabled>   {{ moon_phase.title }}
+                <button type="button" class="btn popover-info" data-toggle="popover" title="{{ moon_phase.title }}" data-content="{{ moon_phase.description }}">
+                    <span class="glyphicon glyphicon-question-sign"></span>
+                </button>
+                <br>
+            {% endif %}
+        {% endfor %}
+        </div>
+        <br>
+        <h5>Specific Full Moons</h5>
+        <div class="full_moon_nicknames">
+        {% for full_moon_nickname in full_moon_nicknames %}
+            {% if full_moon_nickname.full_moon_nickname_id in full_moon_nickname_alerts %}
+                <input type="checkbox" name="full_moon_nickname_choices" value="{{ full_moon_nickname.full_moon_nickname_id }}" checked disabled>   {{ full_moon_nickname.title }}
+                <button type="button" class="btn" data-toggle="popover" title="{{ full_moon_nickname.title }}" data-content="{{ full_moon_nickname.description }}">
+                    <span class="glyphicon glyphicon-question-sign"></span>
+                </button>
+                <br>
+            {% else %}
+                <input type="checkbox" name="full_moon_nickname_choices" value="{{ full_moon_nickname.full_moon_nickname_id }}" disabled>   {{ full_moon_nickname.title }}
+                <button type="button" class="btn" data-toggle="popover" title="{{ full_moon_nickname.title }}" data-content="{{ full_moon_nickname.description }}">
+                    <span class="glyphicon glyphicon-question-sign"></span>
+                </button>
+                <br>
+            {% endif %}
+        {% endfor %}
+        </div>
+        <br>
+        <br>
+        <button class="btn btn-link change-settings" data-is-clicked="false" role="button">Change settings</button>
     </form>
-</table>
-
-
-    <br>
-    <br>
-    <br>
-    <h4>Text subscriptions</h4>
-    <br>
-    <h5>Moon Phases</h5>
-    <div class='moon_phases'>
-    {% for moon_phase in moon_phases %}
-        {% if moon_phase.moon_phase_type_id in moon_phase_type_alerts %}
-            <input type="checkbox" name="moon_phases" value="{{ moon_phase.moon_phase_type_id }}" checked disabled>   {{ moon_phase.title }}
-            <button type="button" class="btn popover-info" data-toggle="popover" title="{{ moon_phase.title }}" data-content="{{ moon_phase.description }}">
-                <span class="glyphicon glyphicon-question-sign"></span>
-            </button>
-            <br>
-        {% else %}
-            <input type="checkbox" name="moon_phases" value="{{ moon_phase.moon_phase_type_id }}" disabled>   {{ moon_phase.title }}
-            <button type="button" class="btn popover-info" data-toggle="popover" title="{{ moon_phase.title }}" data-content="{{ moon_phase.description }}">
-                <span class="glyphicon glyphicon-question-sign"></span>
-            </button>
-            <br>
-        {% endif %}
-    {% endfor %}
-    </div>
-    <br>
-    <h5>Specific Full Moons</h5>
-    <div class="full_moon_nicknames">
-    {% for full_moon_nickname in full_moon_nicknames %}
-        {% if full_moon_nickname.full_moon_nickname_id in full_moon_nickname_alerts %}
-            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.full_moon_nickname_id }}" checked disabled>   {{ full_moon_nickname.title }}
-            <button type="button" class="btn" data-toggle="popover" title="{{ full_moon_nickname.title }}" data-content="{{ full_moon_nickname.description }}">
-                <span class="glyphicon glyphicon-question-sign"></span>
-            </button>
-            <br>
-        {% else %}
-            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.full_moon_nickname_id }}" disabled>   {{ full_moon_nickname.title }}
-            <button type="button" class="btn" data-toggle="popover" title="{{ full_moon_nickname.title }}" data-content="{{ full_moon_nickname.description }}">
-                <span class="glyphicon glyphicon-question-sign"></span>
-            </button>
-            <br>
-        {% endif %}
-    {% endfor %}
-    </div>
-    <br>
-    <br>
-    <button class="btn btn-link change-settings" data-is-clicked="false" role="button">Change settings</button>
-</form>
-
 
 <style>
     .popover.show {
@@ -85,21 +83,16 @@
     $('.change-settings').on('click', () => {
         $('input').removeAttr('disabled');
         $('.change-settings').replaceWith($('<input type=submit>'));
-        $('.change-settings').addClass($('fancy'))
     })
 
-    $(".fancy").click(function(event){
-        event.preventDefault(); //prevent default action 
-        var post_url = $(this).attr("action"); //get form action url
-        var request_method = $(this).attr("method"); //get form GET/POST method
-        var form_data = $(this).serialize(); //Encode form elements for submission
-    
-        $.ajax({
-            url : post_url,
-            type: request_method,
-            data : form_data
-        }).done(function(response){ //
-            $("#server-results").html(response);
+    $('#manage-settings-form').on('submit', (evt) => {
+        evt.preventDefault();
+
+        const formData = {
+            data: $('#manage-settings-form').serialize()
+        };
+
+        $.get('/change-settings.json', formData, (res) => {
         });
     });
 
@@ -108,6 +101,10 @@
             trigger:'click',
         });
     });
+
 </script>
 {% endblock %}
-
+<!-- 
+            // $('<input type=submit>').replaceWith($'<button class="btn btn-link change-settings" data-is-clicked="false" role="button">Change settings</button>');
+            // $('input').attr('disabled');
+            // }; -->
