Added 2 more tests

--- a/static/style.css
+++ b/static/style.css
@@ -88,7 +88,7 @@ input[type="text"], input[type='password'] {
   background-color: transparent;
 }
 
-.change-settings {
+.change-settings, .save-settings {
   border: 1px solid rgba(217, 217, 217);
   padding: 10px;
   margin-bottom: 20px;
