--- a/static/tooltips.css
+++ b/static/tooltips.css
@@ -13,7 +13,7 @@
   box-shadow: 0 0 2px Black;
   padding: 5px;
   text-align: center;
-  font-family: 'Tomorrow', sans-serif;
+  font-family: "Tomorrow", sans-serif;
   font-size: 10px;
 }
 
@@ -31,7 +31,7 @@
   background: #D9D9D9;
   text-transform: uppercase;
   letter-spacing: 0.015em;
-  font-family: 'Tomorrow', sans-serif;
+  font-family: "Tomorrow", sans-serif;
   color: Black;
   width: 150px;
   border-radius: 3px;
