--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -5,9 +5,9 @@
 <h5 class="subheading">Click on any moon phase below to add to your own Google calendar</h5>
 <br>
 
-<div id='calendar'></div>
+<div id="calendar"></div>
 
-<script src='static/moon_phase_today.js'></script>
-<script src='static/calendar.js'></script>
+<script src="static/moon_phase_today.js"></script>
+<script src="static/calendar.js"></script>
 
 {% endblock %}
