--- a/templates/registration.html
+++ b/templates/registration.html
@@ -7,16 +7,16 @@
     <table>
         <tr>
             <td>First name:
-            <input type='text' name ='fname'></td>
+            <input type="text" name ="fname"></td>
             <td>Last name:
-            <input type='text' name ='lname'></td>
+            <input type="text" name ="lname"></td>
         </tr>
         <tr>
             <td><br></td>
         </tr>
         <tr>
             <td>Phone number: 
-            <input type='text' name ='phone'></td>
+            <input type="text" name ="phone"></td>
         </tr>
     </table>
     <br>
