--- a/static/homepage.css
+++ b/static/homepage.css
@@ -6,14 +6,14 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.015em;
   color: rgba(13, 13, 13);
-  font-style: 'Tomorrow', sans-serif;
+  font-style: "Tomorrow", sans-serif;
   line-height: 1.3;
   -webkit-font-smoothing: antialiased;
 }
 
 .left {
   margin-top: 170px;
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   padding: 20px;
   font-size: 20px;
 }
@@ -24,7 +24,7 @@ form {
 
 #signup {
     color: rgba(13, 13, 13);
-    font-family: 'Tomorrow', sans-serif;
+    font-family: "Tomorrow", sans-serif;
     text-transform: uppercase;
     letter-spacing: 0.015em;
     font-weight: 400;
@@ -34,7 +34,7 @@ form {
     font-size: 24px;
 }
 
-.special, .btn-link.try, input[type='submit'] {
+.special, .btn-link.try, input[type="submit"] {
   margin: 0px;
   display: inline-block;
   background-color: transparent;
@@ -42,7 +42,7 @@ form {
   border: 1px solid rgba(13, 13, 13);
   text-transform: uppercase;
   letter-spacing: 0.015em;
-  font-family: 'Tomorrow', sans-serif;
+  font-family: "Tomorrow", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
@@ -69,7 +69,7 @@ form {
   color: rgba(217, 217, 217);
   font-size: 16px;
   text-align: center;
-  font-family: 'Tomorrow', sans-serif;
+  font-family: "Tomorrow", sans-serif;
   margin-bottom: 50px;
 }
 
@@ -78,14 +78,14 @@ input[type="text"]::placeholder, input[type="password"]::placeholder {
   opacity: 1;
   text-transform: uppercase;
   letter-spacing: 0.015em;
-  font-family: 'Tomorrow', sans-serif;
+  font-family: "Tomorrow", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
   background: transparent;
 }
 
-input[type="text"], input[type='password'] {
+input[type="text"], input[type="password"] {
   border-left: transparent;
   border-right: transparent;
   border-top: transparent;
