--- a/templates/base.html
+++ b/templates/base.html
@@ -5,21 +5,21 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href='static/fullcalendar/packages/core/main.css' rel='stylesheet'/>
-    <link href='static/fullcalendar/packages/daygrid/main.css' rel='stylesheet'/>
+    <link href="static/fullcalendar/packages/core/main.css" rel="stylesheet"/>
+    <link href="static/fullcalendar/packages/daygrid/main.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Changa|Electrolize|Jura|Nanum+Gothic+Coding|Press+Start+2P|Tomorrow|Turret+Road|Ubuntu+Mono&display=swap" rel="stylesheet">
     <link href="/static/favicon.ico" rel="icon" type="image/x-icon"/>
 
-    <script src='static/fullcalendar/packages/core/main.js'></script>
-    <script src='static/fullcalendar/packages/daygrid/main.js'></script>
+    <script src="static/fullcalendar/packages/core/main.js"></script>
+    <script src="static/fullcalendar/packages/daygrid/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
 
-    <link href='static/style.css' rel='stylesheet'/>
-    <link rel='stylesheet' href='/static/tooltips.css'/>
+    <link href="static/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/static/tooltips.css"/>
 
 <body>
     <nav class="navbar navbar-default">
