--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                 <li><a href="/display-settings">Manage Settings</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout" class="btn">Log Out</a></li>
+                <li><a href="/logout" class="btn logout">Log Out</a></li>
             </ul>
         </div>
     {% endif %}
