Added gif to read me, organized static folder

--- a/static/homepage.css
+++ b/static/homepage.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(nasa-moon.jpg);
+  background-image: url(img/nasa-moon.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
